Body tag now has min-width of 850px to prevent overflow

--- a/app/assets/stylesheets/controllers/users.sass
+++ b/app/assets/stylesheets/controllers/users.sass
@@ -12,6 +12,7 @@ body
     background: #eeeeee
     position: relative
     min-height: 100vh
+    min-width: 850px
 
     #main
         padding: 1rem 2rem
